# lucid

./: .gitignore  AGENTS.md  CONTRIBUTING.adoc  Cargo.toml  README.adoc  SECURITY.adoc  SECURITY.md  compose.yaml  mise.local.toml  mise.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: agent_bug.yml  api_bug.yml  config.yml  docs_issue.yml  feature_request.yml
.github/workflows/: build.yml  pr-console.yml  pr-rust.yml  pr.yml
.opencode/skills/db-model-impl/: SKILL.md
agent/: .gitignore  Cargo.toml
agent/src/: client.rs  config.rs  main.rs  register.rs
agent/src/commands/: mod.rs  registration.rs  run.rs
agent/src/plugins/: mod.rs
agent/src/util/: crypto.rs
api/: Cargo.toml  config.example.toml  config.toml  openapi.json
api/src/: config.rs  context.rs  error.rs  lib.rs  main.rs  server.rs  session.rs
api/src/auth/: ca.rs  encrypted_ca.rs  error.rs  extractor.rs  jwt.rs  manager.rs  mod.rs  provider.rs  signing.rs
api/src/auth/providers/: activation_key.rs  mod.rs  mtls.rs  session.rs
api/src/context/: mod.rs
api/src/crypto/: aes.rs
api/src/endpoints/: auth.rs  login.rs  mod.rs
api/src/handlers/: activation_keys.rs  agents.rs  ca.rs  jwks.rs  mod.rs  well_known.rs
api/src/handlers/auth/: mod.rs  tests.rs
api/src/handlers/hosts/: mod.rs
auth/: Cargo.toml
auth/macros/: Cargo.toml
auth/macros/src/: lib.rs
auth/src/: context.rs  lib.rs  storage.rs
auth/src/authn/: jwt.rs  mod.rs  oidc.rs
auth/src/authz/: actor.rs  api_resources.rs  builtin_roles.rs  context.rs  lucid.polar  mod.rs  oso_generic.rs  permissions.rs  roles.rs
beacon/: .gitignore  Cargo.toml
beacon/api/: Cargo.toml
beacon/api/src/: lib.rs  main.rs
beacon/config/: Cargo.toml
beacon/config/src/: lib.rs  main.rs
beacon/src/: context.rs  main.rs
beacon/src/api/: http_entrypoints.rs  mod.rs
beacon/src/app/: console_session.rs  mod.rs  oidc_state.rs
common/: Cargo.toml
common/macros/: Cargo.toml
common/macros/src/: lib.rs
common/src/: caller.rs  lib.rs
common/src/api/: error.rs  mod.rs
common/src/params/: agent.rs  host.rs  mod.rs  user.rs
common/src/params/auth/: mod.rs
common/src/views/: activation_key.rs  agent.rs  ca.rs  host.rs  mod.rs  user.rs
common/src/views/auth/: mod.rs
console/: components.json  index.html  openapi-ts.config.ts  package.json  vite.config.ts
console/src/: dummy.test.ts  index.css  main.tsx  routeTree.gen.ts  router.tsx
console/src/components/: data-table.tsx  example.tsx  sidebar.tsx
console/src/components/ui/: breadcrumb.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
console/src/components/views/activation-keys/: create-modal.tsx  keys-table.tsx
console/src/components/views/auth/: login.tsx
console/src/components/views/certificate-authorities/: cas-table.tsx  create-modal.tsx
console/src/components/views/hosts/: hosts-table.tsx
console/src/lib/client/: index.ts  sdk.gen.ts  types.gen.ts
console/src/lib/client/@tanstack/: react-query.gen.ts
console/src/lib/query/: index.tsx
console/src/lib/state/: auth.tsx
console/src/routes/: __root.tsx  _console.tsx  index.tsx
console/src/routes/(auth)/: _auth.tsx
console/src/routes/(auth)/_auth/: auth.login.tsx
console/src/routes/_console/: index.tsx
console/src/routes/_console/activation-keys/: index.tsx
console/src/routes/_console/admin/certificate-authorities/: index.tsx
console/src/routes/_console/hosts/: index.tsx
ctl/: Cargo.toml
ctl/src/: main.rs
ctl/src/commands/: create_user.rs  mod.rs
db/: Cargo.toml
db/fixed-data/: Cargo.toml
db/fixed-data/src/: lib.rs  user_builtin.rs
db/macros/: Cargo.toml
db/macros/common/: Cargo.toml
db/macros/common/src/: lib.rs
db/macros/src/: lib.rs
db/models/: Cargo.toml
db/models/src/: console_session.rs  group.rs  host.rs  lib.rs  organisation.rs  principal_type.rs  role.rs  role_binding.rs  session.rs  typed_uuid.rs  user.rs
db/schema/: .gitignore  Cargo.toml
db/schema/migrations/2026-02-08-020417-0000_init/: down.sql  up.sql
db/schema/migrations/2026-02-08-030000-0001_add_system_admin/: down.sql  up.sql
db/schema/migrations/2026-02-08-040000-0002_add_session_organisation_id/: down.sql  up.sql
db/schema/migrations/2026-02-14-225459-0000_strip_multitenancy_and_authz/: down.sql  up.sql
db/schema/migrations/2026-02-15-004946-0000_create_hosts_table/: up.sql
db/schema/src/: lib.rs  schema.rs  schema_ext.rs
db/src/: errors.rs  lib.rs  models.rs
db/src/datastore/: auth.rs  authz.rs  hosts.rs  mod.rs  sessions.rs  tenant.rs  users.rs
db/src/models/: activation_key.rs  agent.rs  ca.rs  host.rs  mod.rs  session.rs  typed_ulid.rs  user.rs
db/src/storage/: mod.rs  mongodb.rs
docker/postgres-init/: create-multiple-databases.sh
docs/: AGENT_MTLS_PLAN.adoc  API_SESSIONS.adoc  ARCHITECTURE_AUTH.adoc  AUTH_QUICKREF.adoc  CHECKLIST_SIGNING_CHANGES.adoc  README.adoc  README_ED25519.adoc  RELEASE_NOTES_ED25519.adoc  SECURITY_ED25519.adoc  auth.adoc  local-development.adoc  roadmap.adoc
types/: Cargo.toml
types/src/: identity.rs  lib.rs
types/src/authn/: cookies.rs  mod.rs
types/src/dto/: mod.rs  params.rs  views.rs
uuid-kinds/: Cargo.toml
uuid-kinds/src/: lib.rs
