[workspace]
resolver = "2"
members = ["agent","api", "common", "ctl", "db"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22"
bson = { version = "3.1.0", features = ["chrono-0_4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "rand_core"] }
futures = "0.3.32"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
mongodb = { version = "3.5.1", features = ["bson-3", "tracing-unstable"] }
pem-rfc7468 = "0.7"
pkcs8 = { version = "0.10.2", features = ["pem"] }
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "request-id", "trace", "validate-request"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
ulid = { version = "1.2.1", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "ulid"] }
utoipa-axum = "0.2.0"

lucid-common = { path = "./common" }
lucid-db = { path = "./db" }
