[workspace]
resolver = "2"
members = ["agent","api", "common", "ctl", "db"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1.0.102"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22"
bson = { version = "3.1.0", features = ["chrono-0_4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "rand_core"] }
futures = "0.3.32"
getrandom = "0.2"
hex = "0.4"
hostname = "0.4"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
mongodb = { version = "3.5.1", features = ["bson-3", "tracing-unstable"] }
pem-rfc7468 = "0.7"
pkcs8 = { version = "0.10.2", features = ["pem"] }
rand = "0.9"
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
rustls-pemfile = "2.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
sha2 = "0.10"
thiserror = "2.0.18"
time = "0.3"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.18"
toml = { version = "0.9.8", features = ["serde"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "request-id", "trace", "validate-request"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
ulid = { version = "1.2.1", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "ulid"] }
utoipa-axum = "0.2.0"
x509-parser = "0.16"

lucid-common = { path = "./common" }
lucid-db = { path = "./db" }
