[package]
name = "lucid-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
clap.workspace = true
hostname.workspace = true
rcgen.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tokio.workspace = true
tokio-util.workspace = true

lucid-common.workspace = true
