[package]
name = "lucid-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "lucid-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
ulid.workspace = true

lucid-common.workspace = true
