[package]
name = "lucid-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "lucid-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
mongodb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
ulid.workspace = true

lucid-common.workspace = true
lucid-db.workspace = true

async-trait.workspace = true
rand.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
jsonwebtoken.workspace = true
pem-rfc7468.workspace = true
pkcs8.workspace = true
