[package]
name = "lucid-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dropshot.workspace = true
http.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
oso.workspace = true
futures.workspace = true

lucid-auth-macros.workspace = true
lucid-common.workspace = true
lucid-db-models.workspace = true
lucid-db-fixed-data.workspace = true
lucid-types.workspace = true
lucid-uuid-kinds.workspace = true
