[package]
name = "lucid-beacon"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dropshot.workspace = true
hex.workspace = true
http.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-slog.workspace = true
slog.workspace = true
slog-async.workspace = true
rand.workspace = true
moka.workspace = true
openidconnect.workspace = true

lucid-auth.workspace = true
lucid-common.workspace = true
lucid-beacon-api.workspace = true
lucid-beacon-config.workspace = true
lucid-db.workspace = true
lucid-db-models.workspace = true
lucid-types.workspace = true
lucid-uuid-kinds.workspace = true
