[package]
name = "lucid-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
axum = ["dep:axum"]
default = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa.workspace = true
axum = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
