[package]
name = "lucid-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa.workspace = true
ulid.workspace = true

[dev-dependencies]
tokio.workspace = true
