[package]
name = "lucid-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
mongodb.workspace = true
chrono.workspace = true
serde.workspace = true
ulid.workspace = true
thiserror.workspace = true
futures.workspace = true

lucid-common.workspace = true
