[package]
name = "lucid-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
argon2.workspace = true
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
mongodb.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
ulid.workspace = true

lucid-common.workspace = true
