[package]
name = "lucid-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
cookie.workspace = true
dropshot.workspace = true
http.workspace = true
newtype_derive.workspace = true
schemars.workspace = true
serde.workspace = true
serde_with.workspace = true
uuid.workspace = true
lucid-uuid-kinds.workspace = true
