[package]
name = "lucid-auth-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
heck.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_tokenstream.workspace = true
syn.workspace = true

lucid-macros-common.workspace = true
