[package]
name = "lucid-beacon-api"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/main.rs"
name = "lucid-beacon-api-generator"

[dependencies]
dropshot-api-manager-types.workspace = true
dropshot.workspace = true
http.workspace = true
schemars.workspace = true
serde.workspace = true

lucid-common.workspace = true
lucid-types.workspace = true
