[package]
name = "lucid-db-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
serde.workspace = true
serde_tokenstream.workspace = true
lucid-db-macros-common.workspace = true
lucid-types.workspace = true
