[package]
name = "lucid-db-models"
version = "0.1.0"
edition = "2024"

[dependencies]
derive-where.workspace = true
chrono.workspace = true
uuid.workspace = true
diesel.workspace = true
diesel-derive-enum.workspace = true
schemars.workspace = true
serde.workspace = true
lucid-db-macros.workspace = true
lucid-db-schema.workspace = true
lucid-types.workspace = true
lucid-uuid-kinds.workspace = true
